--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ loom {
     splitEnvironmentSourceSets()
 
 	mods {
-		"modid" {
+		"stepup" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
